--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -127,8 +127,8 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="didTabStrawberryBananaJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UaX-0x-9My"/>
                                                     <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vN1-08-h6m"/>
+                                                    <action selector="didTapStrawberryBananaJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qia-ai-bOq"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9E2-H9-FXr">
@@ -143,7 +143,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="didTabMangoKiwiJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T4M-P5-AcD"/>
+                                                    <action selector="didTapMangoKiwiJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Wl-sT-9Zj"/>
                                                     <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ue2-Zs-dFf"/>
                                                 </connections>
                                             </button>
@@ -163,8 +163,8 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="didTabStrawberryJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hFE-xU-lSX"/>
                                                             <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qcq-l2-cg3"/>
+                                                            <action selector="didTapStrawberryJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wrX-C5-W1r"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2A-PH-DJY">
@@ -175,7 +175,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="didTabBananaJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bW3-pZ-VFo"/>
+                                                            <action selector="didTapBananaJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VBw-lW-ngZ"/>
                                                             <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9O4-as-3R3"/>
                                                         </connections>
                                                     </button>
@@ -187,8 +187,8 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="didTabPineappleJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7XW-k3-Rgn"/>
                                                             <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IxD-DX-6D5"/>
+                                                            <action selector="didTapPineappleJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Amg-7d-SD3"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-7H-RXw">
@@ -199,7 +199,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="didTabKiwiJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R6c-gJ-ntK"/>
+                                                            <action selector="didTapKiwiJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zmp-8n-Uai"/>
                                                             <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xv4-Tb-T6a"/>
                                                         </connections>
                                                     </button>
@@ -211,7 +211,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="didTabMangoJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cP6-wt-GL0"/>
+                                                            <action selector="didTapMangoJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Phs-LX-M8e"/>
                                                             <action selector="didTapOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bOu-PD-82P"/>
                                                         </connections>
                                                     </button>
@@ -245,7 +245,7 @@
                     <navigationItem key="navigationItem" title="맛있는 쥬스를 만들어 드려요!" id="Eal-fj-o4N">
                         <barButtonItem key="rightBarButtonItem" title="재고수정" id="C3q-Te-cNT">
                             <connections>
-                                <action selector="didTabStockChangeButton:" destination="BYZ-38-t0r" id="gZA-1O-kQO"/>
+                                <action selector="didTapStockChangeButton:" destination="BYZ-38-t0r" id="rFQ-9N-SbG"/>
                                 <segue destination="Yu1-lM-nqp" kind="show" id="TOg-SF-d3Q"/>
                             </connections>
                         </barButtonItem>
