--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -243,11 +243,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outletCollection property="fruitLabels" destination="Qas-vP-td6" collectionClass="NSMutableArray" id="BVL-Ig-UDY"/>
-                        <outletCollection property="fruitLabels" destination="gvk-pA-Lw5" collectionClass="NSMutableArray" id="xYL-hS-asY"/>
-                        <outletCollection property="fruitLabels" destination="ccQ-Dk-PuY" collectionClass="NSMutableArray" id="Dc7-9I-x9W"/>
-                        <outletCollection property="fruitLabels" destination="FZq-de-TJG" collectionClass="NSMutableArray" id="g5x-0Z-zfC"/>
-                        <outletCollection property="fruitLabels" destination="3Ce-SU-JeH" collectionClass="NSMutableArray" id="tUj-9Z-oFF"/>
+                        <outlet property="bananaLabel" destination="gvk-pA-Lw5" id="9Fm-tT-Hvx"/>
+                        <outlet property="kiwiLabel" destination="FZq-de-TJG" id="EZG-1R-0Nd"/>
+                        <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="FeT-5N-6FZ"/>
+                        <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="9HR-aj-Daz"/>
+                        <outlet property="strawberryLabel" destination="Qas-vP-td6" id="qDj-nb-EOV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
